libsql-server/src/rpc/snapshots/libsql_server__rpc__streaming_exec__test__query_number_less_than_previous_query-2.snap
---
source: libsql-server/src/rpc/streaming_exec.rs
expression: resp
---
Err(
    Status {
        code: InvalidArgument,
        message: "received request with id less than last received request, closing stream",
        source: None,
    },
)
