libsql-server/src/rpc/snapshots/libsql_server__rpc__streaming_exec__test__single_query_split_response.snap
---
source: libsql-server/src/rpc/streaming_exec.rs
expression: builder.into_ret()
---
[
    Ok(
        [
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
            [
                Text(
                    "something moderately long",
                ),
            ],
        ],
    ),
]
